@@ -1,73 +1,162 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>base</artifactId>
-    <groupId>org.sakaiproject</groupId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <artifactId>base</artifactId>
+        <groupId>org.sakaiproject</groupId>
+        <version>2.7.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <name>Sakai JSF Base POM (jsf)</name>
+    <groupId>org.sakaiproject.jsf</groupId>
+    <artifactId>jsf</artifactId>
     <version>2.7.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <name>Sakai JSF Project</name>
-  <groupId>org.sakaiproject</groupId>
-  <artifactId>jsf-base</artifactId>
-  <packaging>pom</packaging>
-  <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/jsf/trunk</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/jsf/trunk</developerConnection>
-    <url>https://source.sakaiproject.org/svn/jsf/trunk</url>
-  </scm>
-  <modules>
-    <module>app</module>
-    <module>resource</module>
-    <module>tool</module>
-    <module>widgets</module>
-    <module>widgets-myfaces</module>
-    <module>widgets-sun</module>
-    <module>spreadsheet</module>
-    <module>depend-widgets-sun</module>
-    <module>depend-widgets-myfaces</module>
-    <module>jsf-sun-tool</module>
-    <module>jsf-myfaces-tool</module>
-  </modules>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-widgets</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-widgets-sun</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-tool</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-app</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-depend-jsf-widgets-myfaces</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-depend-jsf-widgets-sun</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-widgets-myfaces</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    <packaging>pom</packaging>
+    
+    <properties>
+        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/jsf/${project.version}</url.localsite>
+        <!--
+            <url.localsite>dav:http://source.sakaiproject.org/release/jsf/${project.version}</url.localsite>
+        -->
+    </properties>
+
+    <modules>
+        <module>jsf-app</module>
+        <module>jsf-assembly</module>
+        <module>jsf-resource</module>
+        <module>jsf-spreadsheet</module>
+        <module>jsf-tool</module>
+        <module>jsf-tool-sun</module>
+        <module>jsf-widgets</module>
+        <module>jsf-widgets-sun</module>
+        <module>jsf-widgets-sun-depend</module>
+        <module>myfaces-tool</module>
+        <module>myfaces-widgets</module>
+        <module>myfaces-widgets-depend</module>
+    </modules>
+
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/svn/jsf/trunk</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/jsf/trunk</developerConnection>
+        <url>https://source.sakaiproject.org/svn/jsf/trunk</url>
+    </scm>
+    
+    <distributionManagement>
+        <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven-snapshots</id>
+            <name>Sakai snapshot Repo</name>
+            <url>dav:http://source.sakaiproject.org/maven2-snapshots</url>
+            <layout>default</layout>
+        </snapshotRepository>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven2</id>
+            <name>Sakai maven2 repository</name>
+            <url>dav:https://source.sakaiproject.org/maven2</url>
+            <layout>default</layout>
+        </repository>
+        <site>
+            <id>sakai-site</id>
+            <name>Sakai release Site</name>
+            <url>${url.localsite}</url>
+        </site>
+    </distributionManagement>
+    
+    <repositories>
+        <repository>
+            <id>sakai-maven2</id>
+            <name>Sakai Maven Repository</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+        <id>sakai-maven2-snapshots</id>
+        <name>Sakai Maven Repo Snapshots</name>
+        <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <snapshots>
+        <enabled>true</enabled>
+        </snapshots>
+        </repository>
+        <repository>
+            <id>default</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>jsf-app</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>jsf-tool</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>jsf-widgets</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>jsf-widgets-sun</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>jsf-widgets-sun-depend</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
+             <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>myfaces-widgets</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>myfaces-widgets-depend</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <maxmemory>512m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
